# typeset-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  fix-code-quality.sh
.githooks/: pre-commit
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  ci.yml  dependabot-auto-merge.yml  dependencies.yml  release.yml
docs/context/: ARCHITECTURE.md  CI_CD.md  DEVELOPMENT.md  DSL_SYNTAX.md  GIT_HOOKS.md  PERFORMANCE.md  TESTING.md  TWO_BUFFER_DESIGN.md
examples/: parse.rs
scripts/: fix-code-quality.sh  install-hooks.sh  update-version.sh
src/: compiler.rs  layout.pest  lib.rs  list.rs  map.rs  parser.rs  util.rs
tests/: build.sh  compare.sh  fuzz.py  run.sh
tests/tester/: tester.opam
tests/unit/: Cargo.toml
tests/unit/src/: layout.pest  main.rs  parser.rs
typeset/: Cargo.toml  README.md
typeset-parser/: Cargo.toml  README.md
typeset-parser/examples/: full.rs
typeset-parser/src/: lib.rs
typeset/benches/: README.md  layout_performance.rs  scaling.rs  two_buffer_comparison.rs
typeset/examples/: README.md  alloc_probe.rs  basic.rs  code_formatter.rs  convenience_api.rs  dsl_syntax.rs  json_formatter.rs  lisp_formatter.rs  perf_probe.rs
typeset/src/: avl.rs  compiler.rs  lib.rs  list.rs  map.rs  order.rs  util.rs
typeset/src/compiler/: constructors.rs  error.rs  memory.rs  mod.rs  pipeline.rs
typeset/src/compiler/constructors/: basic.rs  composition.rs  control.rs  format.rs  joining.rs  mod.rs  text_utils.rs  wrappers.rs
typeset/src/compiler/passes/: broken.rs  denull.rs  fixed.rs  flatten.rs  heap.rs  identities.rs  linearize.rs  mod.rs  normalize.rs  reassociate.rs  rescope.rs  resolve_breaks.rs  serialize.rs  split_lines.rs  structurize.rs  term_chain.rs  walk.rs
typeset/src/compiler/passes/resolve_scopes/: graph.rs  graphify.rs  mod.rs  rebuild.rs  solve.rs
typeset/src/compiler/passes/structurize/: graph.rs  graphify.rs  mod.rs  rebuild.rs  solve.rs
typeset/src/compiler/render/: engine.rs  mod.rs
typeset/src/compiler/types/: doc.rs  intermediate.rs  layout.rs  mod.rs  traversal.rs
typeset/tests/: compiler_passes_tests.rs  depth_limit_tests.rs  integration_tests.rs  performance_tests.rs  unicode_width_tests.rs
