[workspace]
resolver = "2"
members = [
  "typeset",
  "typeset-parser"
]
exclude = [
  "tests/unit"
]

[workspace.package]
edition = "2024"
rust-version = "1.89.0"
version = "3.1.1"
authors = ["Soren Norbaek <sorennorbaek@gmail.com>"]
license-file = "LICENSE"
categories = ["compilers", "template-engine"]

[workspace.dependencies]
bumpalo = "3.19"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
typeset = { version = "3.1.1", path = "typeset" }
typeset-parser = { version = "3.1.1", path = "typeset-parser" }
criterion = { version = "0.5", features = ["html_reports"] }
