[workspace]
resolver = "2"
members = [
  "typeset",
  "typeset-parser"
]
exclude = [
  "tests/unit"
]

[workspace.package]
edition = "2024"
rust-version = "1.89.0"
version = "3.2.1"
authors = ["Soren Norbaek <sorennorbaek@gmail.com>"]
license = "GPL-3.0-or-later"
categories = ["compilers", "template-engine"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
bumpalo = "3.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "3.0", features = ["full"] }
typeset = { version = "3.2.1", path = "typeset" }
typeset-parser = { version = "3.2.1", path = "typeset-parser" }
criterion = { version = "0.8", features = ["html_reports"] }
