[package]
name = "typeset-parser"
description = "Compile time macro parser for typeset"
version = "3.0.3"
edition = "2021"
authors = ["Soren Norbaek <sorennorbaek@gmail.com>"]
homepage = "https://docs.rs/typeset-parser/latest/typeset-parser/"
repository = "https://github.com/soren-n/typeset-rs/tree/main/typeset-parser"
documentation = "https://docs.rs/typeset-parser/latest/typeset-parser/"
keywords = ["dsl", "pretty", "printer", "parser", "macro"]
categories = ["compilers", "template-engine"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = [ "full" ] }

[dev-dependencies]
typeset = { version = "3.0.3", path = "../typeset" }

[lib]
proc-macro = true
