[package]
name = "typeset-parser"
description = "Compile time macro parser for typeset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage = "https://docs.rs/typeset-parser/latest/typeset-parser/"
repository = "https://github.com/soren-n/typeset-rs/tree/main/typeset-parser"
documentation = "https://docs.rs/typeset-parser/latest/typeset-parser/"
keywords = ["dsl", "pretty", "printer", "parser", "macro"]
categories.workspace = true
license-file.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
typeset.workspace = true

[lib]
proc-macro = true
