[package]
name = "typeset"
description = "A DSL for defining source code pretty printers"
version = "3.0.0"
edition = "2021"
authors = ["Soren Norbaek <sorennorbaek@gmail.com>"]
homepage = "https://docs.rs/typeset/latest/typeset/"
repository = "https://github.com/soren-n/typeset-rs/tree/main/typeset"
documentation = "https://docs.rs/typeset/latest/typeset/"
keywords = ["dsl", "pretty", "printer"]
categories = ["compilers", "template-engine"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
bumpalo = "3.17.0"

[dev-dependencies]
typeset-parser = { version = "2.0.5", path = "../typeset-parser" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "layout_performance"
harness = false
