[package]
name = "typeset"
description = "A DSL for defining source code pretty printers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage = "https://docs.rs/typeset/latest/typeset/"
repository = "https://github.com/soren-n/typeset-rs/tree/main/typeset"
documentation = "https://docs.rs/typeset/latest/typeset/"
keywords = ["dsl", "pretty", "printer"]
categories.workspace = true
license-file.workspace = true
readme = "README.md"

[dependencies]
bumpalo.workspace = true

[dev-dependencies]
typeset-parser.workspace = true
criterion.workspace = true

[[bench]]
name = "layout_performance"
harness = false
